# embedded-devops-starter

./: .clang-format  .gdbinit  .gitignore  CMakeLists.txt  README.md  STM32F401_FLASH.ld  toolchain-arm-gcc.cmake
.github/workflows/: build.yml  ci.yml
include/: app.h  hal_gpio.h  stm32f4xx.h
src/: app.c  hal_gpio.c  main.c  math_utils.c  math_utils.h  syscalls.c  system_stm32f4xx.c  winentry.c
startup/: startup_stm32f401xc.s
tests/: CMakeLists.txt  test_app.c  test_logic.c  test_math.c  test_math_utils.c
tests/mocks/: mock_hal_gpio.c  mock_hal_gpio.h
